# SFML-2D-Shooter

./: CMakeLists.txt  diagram.drawio  enemies.cpp  enemies.h  game.cpp  game.h  items.cpp  items.h  list.h  main.cpp  map.cpp  map.h  storage.h  test.cpp  test.h  unit.cpp  unit.h  weapons.cpp  weapons.h
SFML/include/SFML/Graphics/: Text.hpp
SFML/include/SFML/System/: Sleep.hpp
